Added Linux support to ConfigManager & EncryptionManager.
Added Operating System detection to the splashscreen.

Updated the Aboutpage.html to reflect the latest build.